--- a/Plast_(lidn).mw
+++ b/Plast_(lidn).mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Plastan lidnanznam
  | Flag text = Plastan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 17,648
- | Voz' = 2017
+ | Eläjiden lugu = 17,273
+ | Voz' = 2020
  | Pind = 87.62
  | Fail = Дк октябрь.jpg
- | Pämez' = Aleksandr Neklüdov<br />(1991—)
+ | Pämez' = Andrei Pesträkov<br />(kku 20—) Edeline lidnan pämez' om Aleksandr Neklüdov (1991 — ).
  | Telefonkod = +7-35160-xx-xxx
  | Avtokod = 74. 174
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -34,6 +34,14 @@ Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 17 342 rist
 Rahvahad (2010): [[venälaižed]] — 83,3%, [[totarlaižed]] — 8,4%, [[baškiralaižed]] — 1,9%, [[kazahlaižed]] — 1,8%, [[ukrainalaižed]] — 1,4%, toižed rahvahad — 3,2%.
 
 Professionaližen opendusen aluzkund om [[Kopeisk]]an politehnižen kolledžan Plastan filial.<ref>[http://kpk74.ru/abiturient/specialities/170-plastovskij-filial Plastan filial Kopeiskan politehnižen kolledžan ''kpk74.ru''-saital.] {{ref-ru}} <small>''(+ äikel'ne avtomatine känduz)''</small></ref>
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Историко-краеведческий музей (2).jpg|Kodirandantedištandmuzei (2014)
+Церковь Николая Чудотворца Пласт.jpg|Mikulai-čudonsädajan jumalanpert', vn 2008 nägu
+Пласт поликлиника.jpg|Poliklinik (2008)
+Пласт аквамарин.jpg|«Akvamarin»-bassein (2008)
+</gallery>
 
 == Homaičendad ==
 <references />
