--- a/Plast_(lidn).mw
+++ b/Plast_(lidn).mw
@@ -9,7 +9,7 @@
  | Voz' = 2020
  | Pind = 87.62
  | Fail = Дк октябрь.jpg
- | Pämez' = Andrei Pesträkov<br />(kku 20—) Edeline lidnan pämez' om Aleksandr Neklüdov (1991 — ).
+ | Pämez' = Andrei Pesträkov<br />(reduku 2020—)
  | Telefonkod = +7-35160-xx-xxx
  | Avtokod = 74. 174
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -29,11 +29,15 @@ Lidn sijadase rajonan päivnouzmas, [[Uralmäged|Suviuralan]] päivnouzmaižil p
 Pčel'nik-futor (39 rist. vl 2017) mülüb lidnankundha Plastan ližaks.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 17 342 ristitud, lidnankundan — 17 376 ristitud, rajonan kaks' koumandest. Kaikiš suremb lidnan ristitišt oli 24..25 tuhad eläjid vll 1939−1967 (25 897 rist. vl 1959). Kaik 17 687 ristitud elihe lidnankundas vl 2017.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 17 342 ristitud, lidnankundan — 17 376 ristitud, rajonan kaks' koumandest. Kaikiš suremb lidnan ristitišt oli 24..25 tuhad eläjid vll 1939−1967 (25 897 rist. vl 1959). Kaik 17 648 elihe lidnas i 17 687 ristitud kaikes lidnankundas vl 2017.
 
 Rahvahad (2010): [[venälaižed]] — 83,3%, [[totarlaižed]] — 8,4%, [[baškiralaižed]] — 1,9%, [[kazahlaižed]] — 1,8%, [[ukrainalaižed]] — 1,4%, toižed rahvahad — 3,2%.
 
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] koume jumalanpertid<ref>[http://sobory.ru/geo/locat/21854 Plastan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> oma olmas lidnas: kaks' jumalanpertid i časoun', niiden ližaks kivine jumalanpert' om sauvomas vspäi 2018.
+
 Professionaližen opendusen aluzkund om [[Kopeisk]]an politehnižen kolledžan Plastan filial.<ref>[http://kpk74.ru/abiturient/specialities/170-plastovskij-filial Plastan filial Kopeiskan politehnižen kolledžan ''kpk74.ru''-saital.] {{ref-ru}} <small>''(+ äikel'ne avtomatine känduz)''</small></ref>
+
+Edeline lidnan pämez' om Aleksandr Neklüdov (1991 — sügüz'ku 2020).
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
