*Empty MediaWiki Message*

--- a/Kel'.mw
+++ b/Kel'.mw
@@ -17,12 +17,12 @@ Kelen koume päfunkcijad:
 * kognitivine (gnoseologine) — informacijan kogodamine, kaičend, ümbriradmine da oigendamine;
 * akkumulätivine — tedoiden kogodamine da kaičend.
 
-== Kel'he sidotud vepsän muštatišed ==
+== Kel'he sidodud vepsän muštatišed ==
 <blockquote>
-* ''Ičeiž kel't ed unohta''.
-* ''Ičemoi kel't ei ole parembad''.
-* ''Keleta ei sa pagišta''.
-* ''Kel't ei ole jüged kandišta''.
+* ''Ičeiž kel't ed unohta.''
+* ''Ičemoi kel't ei ole parembad.''
+* ''Keleta ei sa pagišta.''
+* ''Kel't ei ole jüged kandišta.''
 </blockquote>
 
 == Homaičendad ==
