/* Merhe sidodud vepsän muštatišed da ozoitesed */ +

--- a/Meri.mw
+++ b/Meri.mw
@@ -9,15 +9,16 @@ Meri om tarbhaine vedamha jüguid, püdumha [[kala]]d da [[merenproduktad|meripr
 [[Mail'man merenpäiv]] praznuičese sügüz'kun lopnedalin ühtel päivišpäi, ohjastuz paneb sen datad jogo valdkundas.
 
 == Merhe sidodud vepsän muštatišed da ozoitesed ==
-;Muštatišed
+=== Muštatišed ===
 <blockquote>
 * ''Aig andab tünen meren, aig — vodajan venehen.''
 * ''Ei sil meri pagan ole, mi koirad randas lipitadas.''
+* ''Enzne vezi jo meres om.'' (männu azj)
 * ''Ištu merenno, varasta säd.''
 * ''Sorz meres, muna perskes.''
 </blockquote>
 
-;Ozoitez
+=== Ozoitez ===
 <blockquote>
 Haug' meres, a händ ülähän. (kauh vezilačus)
 </blockquote>
