/* Vedhe sidodud vepsän muštatišed da ozoitesed */ +

--- a/Vezi.mw
+++ b/Vezi.mw
@@ -22,6 +22,7 @@ Veden ninevuz om 0,9982 g/sm³, suladandlämuz om 0 C°, kehundtemperatur om lä
 === Muštatišed ===
 <blockquote>
 * ''Aig astub, kuti vezi jokseb.''
+* ''Enzne vezi jo meres om.'' (männu azj)
 * ''Heinäd alemb, vet ülemb.''
 * ''Ištujan kiven alle vezi ei jokse.''
 * ''Kadoi kuti kala vedhe.''
