/* Rahoiže sidodud vepsän muštatišed */ +

--- a/Rahad.mw
+++ b/Rahad.mw
@@ -23,6 +23,7 @@ Nügüd'aigan elektronižed rahad vajehtadas personaližid. Maksmižen tetpaiže
 * ''Den'gad den'goid ei olgoi magedamb.''
 * ''Den'gad rades tuldas, a vihel'dusel lähttas.''
 * ''Den'goid kuti kažil kündlid.''
+* ''Den'goil katust ed kata, katad den'goihe.''
 * ''Ei sa rahoid sandal sada, a pidab pidandal pidada.''
 * ''Korman ei käske.'' (rahoid ei ole)
 * ''Rahad da leib vellesed oma.''
