--- a/Vezi.mw
+++ b/Vezi.mw
@@ -30,6 +30,7 @@ Veden ninevuz om 0,9982 g/sm³, suladandlämuz om 0 C°, kehundtemperatur om lä
 * ''Leib da vezi — saldatan söm.''
 * ''Märg ei varaida vet.''
 * ''Palanu lämoid ei varaida, a upnu — vet.''
+* ''Süväs kaivos vezi ei lopte.''
 * ''Toižes kodiš i vet toižin kandištas.''
 * ''Tünäs vedes sured kalad kudodas.''
 * ''Vanh ak vinad job, laho pu vet vedab.''
