--- a/Kaiv.mw
+++ b/Kaiv.mw
@@ -8,6 +8,11 @@ Kaivoiden palad oma kaivuz, pä ülemb man tazopindad, vedenotai alah. Seiniden 
 
 Kaiv om tarbhaine veden varapurtkeks uman täht. Ühted kaikiš süvembiš kaivoišpäi oma [[Karakum]]-letetazangištos. Niišpäi äjad oma enamba sadad metrad süvütte, üks' — 270 metrad.
 
+== Kaivha sidodud vepsän muštatiž ==
+<blockquote>
+* ''Süväs kaivos vezi ei lopte.''
+</blockquote>
+
 == Homaičendad ==
 <references />
 
