--- a/Must_muju.mw
+++ b/Must_muju.mw
@@ -49,23 +49,24 @@ Kävutase [[kor'b]]en da [[toine pol'|toižen polen]] ozutamha. Mugažo se om [[
 
 == Mustan mujun londuseline olend olmas ==
 <center><gallery>
-Fail:Une grappe de cassis.JPG|[[Čigičaine|Čigičaižen]] marjad
-Fail:BlackWoods.jpg|[[Kärg'|Kärgen]] ([[torolind]]un) ižač poigidenke
-Fail:Corvus corone Rabenkrähe 1.jpg|[[Kron'a]]
-Fail:Pickerel.jpg|Must [[haug']]<br />([[Pohjoižamerik]])
-Fail:Assam-Tee SFTGFOP1.jpg|Must [[čai]]<br />([[Indii]])
-Fail:Gato negro.JPG|Must [[kaži]]
+Une grappe de cassis.JPG|[[Čigičaine|Čigičaižen]] marjad
+BlackWoods.jpg|[[Kärg'|Kärgen]] ([[torolind]]un) ižač poigidenke
+Corvus corone Rabenkrähe 1.jpg|[[Kron'a]]
+Pickerel.jpg|Must [[haug']]<br />([[Pohjoižamerik]])
+Assam-Tee SFTGFOP1.jpg|Must [[čai]]<br />([[Indii]])
+Gato negro.JPG|Must [[kaži]]
 </gallery></center>
 
-== Mustha mujuhu sidotud tärtused ==
+== Mustha mujuhu sidodud tärtused ==
 * ''[[Čopjäine]]'' — must [[parm]].
 * ''Must mez', must mec'' — [[lemboi]], toine pol'.
 * ''[[Slanc]]'' — must [[pölvaz]].
 
 == Mustha mujuhu sidodud vepsän muštatišed da ozoitesed ==
-=== Muštatiž ===
+=== Muštatišed ===
 <blockquote>
 * ''Mustad koirad vauktaks ei voi pesta.''
+* ''Pada katl'an lajib, a iče-ki must om.''
 </blockquote>
 
 === Ozoitesed ===
