--- a/Muzik.mw
+++ b/Muzik.mw
@@ -10,6 +10,14 @@ Muzikan vänd valatoitab imetaiživatoid i gavedid.
 
 Neofitad openudas sol'fedžiod. [[Muzikantedo]] tedoidab muzikan teorijad: muzikkulund, muzikrivi, notacii. ''Amuzii'' om muzikan tundištamižen i vändon mahtusen kadotuz [[päaivod|päaivoiden]] oiktan šurupoliškon vigastusen tagut.
 
+== Muzikha sidodud vepsän muštatiž ==
+<blockquote>
+* ''Midä vätas, muga i kargaidad.''
+</blockquote>
+
+== Kacu mugažo ==
+* [[Pajo]]
+
 == Homaičendad ==
 <references />
 
