/* Mahushe sidodud vepsän muštatišed da ozoitesed */ +

--- a/Mahuz.mw
+++ b/Mahuz.mw
@@ -18,6 +18,7 @@ Mineraližed komponentad ottas mahusen 50..60 % mülün mödhe i 90..97 procenth
 <blockquote>
 * ''Eile rad taivhas, a om mas.''
 * ''Kibinas ma palab.''
+* ''Kuivadme madme asttes jaugoid ed kasta.''
 * ''Ma navedib hergen, a pap' andandan.''
 * ''Mad kivita ei ole.''
 * ''Mas magadad — tegese nell'kümne pahut.''
