*Empty MediaWiki Message*

--- a/Ohansk.mw
+++ b/Ohansk.mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Ohansk<br />Оханск
- | Lidnanznam = Coat of Arms of Okhansk (Perm krai) (2009).png
+ | Lidnanznam = Coat of Arms of Okhansk (Perm krai) (2018).gif
  | Flag = Flag of Ohansk (Perm krai).png
  | Lidnanznam text = Ohanskan lidnanznam
  | Flag text = Ohanskan flag
