--- a/Forrest_Gamp.mw
+++ b/Forrest_Gamp.mw
@@ -9,7 +9,7 @@ Režissör — [[Zemekis Robert|Robert Zemekis]].
 * ''Den Teilor'' — [[Geri Siniz]]
 * ''Gamp'' — [[Salli Fild]]
 == Homaičendad ==
-<references/>
+{{reflist|2}}
 
 {{stub}}
 [[Kategorii:AÜV:oiden fil'mad]]
