--- a/Forrest_Gamp.mw
+++ b/Forrest_Gamp.mw
@@ -1,3 +1,4 @@
+{{Čuta poiš|New stub < 1 kB}}
 {{Fil'm-WD}}
 '''«Forrest Gamp»''' ({{lang-en|Forrest Gump}}) om [[1994]]-nden voden [[AÜV|amerikalaine]] torafil'm.
 
