--- a/Ohansk.mw
+++ b/Ohansk.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 7,072
  | Voz' = 2017
  | Pind = 17.6
- | Fail = 
+ | Fail = Pervomayskaya 43.jpg
  | Pämez' = Anatolii Zavjalov<br />(sügüz'ku 2013—)
  | Telefonkod = +7-34279-xx-xxx
  | Avtokod = 59. 81. 159
@@ -19,15 +19,20 @@
 == Istorii ==
 Eländpunktan aluz om pandud [[Stroganovad]]-torgovanoiden pätandan mödhe vl 1547 kuti ''kalanpüdajiden Ohan'-slabad' ''. Sen nimi sündui sijaližes {{lang-ru|охань}}-sanaspäi «harvsil'maine verk püdamha kalad». Om lidnan statusanke vspäi 1781. Vl 1923 Ohanskan rajon om sätud, i Ohansk kändihe sen keskusen.
 
+Lidnan tegimišton edheotandad oma omblendfabrik, leibänkombinat, mecanümbriradai edheotand. Ohansk om maižanduzrajonan keskuseks. Permin universitetan biostancii sijadase lidnas tedoidamha vezivaradimen biologijad.
+
 == Geografijan andmused ==
 Lidn sijadase [[Kam (jogi)|Kam-jogen]] [[Votkinskan vezivaradim]]en (vspäi 1964) oiktal randal, 110 m keskmäižel korktusel valdmeren pindan päl, «[[Kazan']] — [[Perm']]»-avtotel. Matkad Permihesai om 60 km pohjoižpäivnouzmha orhal, 72 km avtotedme vai 126 km Kam-jogel. Toižed lähembaižed lidnad oma [[Očor]] 44 km lodeheze orhal vai 68 km avtotedme i [[Nitv]] (lähembaine raudtestancii) 25 km pohjoižhe orhal vai 48 km avtol.
 
 Ohansk om lidnankundan üks'jäine eländpunkt.
 
-== Eläjad da ižanduz ==
+== Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 7250 ristitud, koume seičemendest rajonan ristitištos. Kaikiš suremb ristitišt oli 8800..9000 eläjad vozil 1992−2001 (9 tuh. rist. vll 2000 i 2001).
 
-Lidnan tegimišton edheotandad oma omblendfabrik, leibänkombinat, mecanümbriradai edheotand. Ohansk om maižanduzrajonan keskuseks. Permin universitetan biostancii sijadase lidnas tedoidamha vezivaradimen biologijad.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' pühäpertid<ref>[http://sobory.ru/geo/locat/8194 Ohanskan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> oma olmas lidnas: Jumalanmaman Emäganpäivän päjumalanpert', ph. Aleksandr Nevalaižen jumalanpert' i časoun'.
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://ohanskij.permarea.ru/ohanskoe Ohanskan lidnankundan lehtpoled rajonan tobmuden vanhal portalal (''ohanskij.permarea.ru'').] {{ref-ru}}
