toine radai sait

--- a/Ohansk.mw
+++ b/Ohansk.mw
@@ -35,8 +35,8 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 7250 ristitud, kou
 <references />
 
 == Irdkosketused ==
+* [http://ohansk-adm.ru/ Lidnümbrikon oficialine sait (''ohansk-adm.ru'').] {{ref-ru}}
 * [http://ohanskij.permarea.ru/ohanskoe Ohanskan lidnankundan lehtpoled rajonan tobmuden vanhal portalal (''ohanskij.permarea.ru'').] {{ref-ru}}
-* [http://ohansk-city.ru/ Lidnankundan vanh oficialine sait (''ohansk-city.ru'', —2014).] {{ref-ru}}
 {{Commons|Category:Okhansk}}
 
 {{Permin randan lidnad}}
