--- a/Jemanželinsk.mw
+++ b/Jemanželinsk.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Jemanželinskan lidnanznam
  | Flag text = Jemanželinskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 29,077
- | Voz' = 2017
+ | Eläjiden lugu = 28,216
+ | Voz' = 2020
  | Pind = 20
  | Fail = Yemanzhelinsk, Chelyabinsk Oblast, Russia - panoramio.jpg
- | Pämez' = Aleksandr Hrulev<br />(keväz'ku 2010—)
+ | Pämez' = Dmitrii Gatov<br />(kül'mku 2020—)
  | Telefonkod = +7-35138-xx-xxx
  | Avtokod = 74. 174
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -22,18 +22,28 @@ Eländpunktan aluz om pandud ''Jemanželinskije hilenvarad''-radnikžiloks ({{la
 Jemanželinsk šingotase «Uralec»-minitraktoriden edheotandal<ref>[http://уралец.рф/ «Uralec»-torguindmarkan oficialine sait (''уралец.рф'').] {{ref-ru}}</ref>, keramižen savičun tegimel, agregatiž-mehanižel tegimel (maižanduztehnikan kohenduz i varapalad), Uralan pirotehnikan tegimel, omblendfabrikal i kombisömän tegimel.
 
 == Geografijan andmused ==
-Lidn sijadase rajonan pohjoižpäivnouzmas, 220 m ü.m.t. keskmäižel korktusel. Hutorskoje-järv om lidnan päivnouzmaižes palas. Jemanželink-jogi ({{lang-ba|Яманйылға}} «huba jogi» 20 km pitte) lankteb stokutomaha Sur' Sarikul'-järvhe, se levitase 1 km suvipäivnouzmha lidnaspäi ({{lang-ba|Оло Һарыкүл}} «pakuine järv» 68 km², ende 103 km²).
+Lidn sijadase rajonan pohjoižpäivnouzmas, 220 m ü.m.t. keskmäižel korktusel. Hutorskoje-järv om lidnan päivnouzmaižes palas. Jemanželink-jogi ({{lang-ba|Яманйылға}} «huba jogi» 20 km pitte) lankteb stokutomaha Sur' Sarikul'-järvhe, se levitase ühtes kilometras suvipäivnouzmha lidnaspäi ({{lang-ba|Оло Һарыкүл}} «pakuine järv» 68 km², ende 103 km²).
 
 «Čeläbinsk — [[Magnitogorsk]]»-avtote mäneb 1 km päivlaskmha lidnaspäi. Matkad [[Čeläbinsk]]an röunhasai om 30 kilometrad pohjoižhe orhal vai avtotedme. Lähembaine lidn om [[Korkino]] 15 km pohjoižhe orhal vai avtotedme. Jemanželinsk-raudtestancii om saudud rajonan Zaural'skii-žilos 5 km lodeheze lidnaspäi.
 
 Koume žilod mülüdas lidnankundha Jemanželinskan ližaks. Lidnankundan pind — 64,34 km².
 
 == Eläjad ==
-Vl 1939 lidnan ristitišt oli 11 100 eläjad. Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 30 216 ristitud, lidnankundan — 31 136 ristitud. Kaikiš suremb lidnan ristitišt oli 36 tuhad eläjid vl 1967. Kaik 29 921 ristitud elihe lidnankundas vl 2017.
+Vl 1939 lidnan ristitišt oli 11 100 eläjad. Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 30 216 ristitud, lidnankundan — 31 136 ristitud. Kaikiš suremb lidnan ristitišt oli 36 tuhad eläjid vl 1967. Kaik 29 077 ristitud elihe lidnas i 29 921 ristitud kaikes lidnankundas vl 2017.
 
 Rahvahad (2010): [[venälaižed]] — 87,9%, [[totarlaižed]] — 4,3%, [[ukrainalaižed]] — 2,6%, [[baškiralaižed]] — 1,2%, [[saksalaižed]] — 1,2%, toižed rahvahad — 2,8%.
 
 Professionaližen opendusen aluzkund om Pervomaiskijan sauvondmaterialižtegimišton tehnikuman Jemanželinskan filial.
+
+Edeline lidnankundan pämez' om Aleksandr Hrulev (keväz'ku 2005 — kül'mku 2020).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Jemanschelinsk-Denkmal.jpg|Suren sodan memorialine kompleks (2010)
+МПК Ромкор в г. Еманжелинске. Проходная.JPG|Lihanümbriradajan «Romkor»-kompanijan tulend vl 2010
+Yemanzhelinsk, Chelyabinsk Oblast, Russia - panoramio (2).jpg|Lidnan poliklinikan naižkonsul'tacijan tulend (2014)
+Yemanzhelinsk. Victory Square (WR).tif|Čomamahtoiden škol lapsiden täht Vägestusen skveras (2001)
+</gallery>
 
 == Homaičendad ==
 <references />
