--- a/Jurüzan'_(lidn).mw
+++ b/Jurüzan'_(lidn).mw
@@ -1,15 +1,15 @@
 {{Eländpunkt
  | Nimi = Jurüzan'<br />Юрюзань
- | Lidnanznam =
+ | Lidnanznam = Yuryuzan COA.gif
  | Flag = Flag of Yuryuzan (Chelyabinsk oblast).png
- | Lidnanznam text =
+ | Lidnanznam text = Jurüzanin lidnanznam
  | Flag text = Jurüzanin flag
  | Valdkund = Venäma
- | Eläjiden lugu = 11,685
- | Voz' = 2017
+ | Eläjiden lugu = 10,908
+ | Voz' = 2021
  | Pind = 20
  | Fail = Станция Юрюзань.jpg
- | Pämez' = Jurii Bobilev<br />(semendku 2018—.<br />''Юрий Бобылев'')
+ | Pämez' = Aleksandr Dobrovol'skii<br />(heinku 2021—)
  | Telefonkod = +7-35147-xx-xxx
  | Avtokod = 74. 174
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -34,6 +34,8 @@ Vl 1939 lidnan ristitišt oli 10 800 eläjad. Vn 2010 Venäman rahvahanlugemiže
 Rahvahad (2010): [[venälaižed]] — 81,7%, [[totarlaižed]] — 7,9%, [[baškiralaižed]] — 6,9%, toižed rahvahad — 3,5%.
 
 Professionaližen opendusen aluzkund om Jurüzanin tehnologine tehnikum.<ref>[http://unpo21.edusite.ru/ Jurüzanin tehnologižen tehnikuman sait (''unpo21.edusite.ru'').] {{ref-ru}} <small>''(+ äikel'ne avtomatine känduz)''</small></ref>
+
+Edeline lidnankundan pämez' om Jurii Bobilev (semendku 2018 — heinku 2021, ''Юрий Бобылев'').
 
 == Homaičendad ==
 <references />
