--- a/Kus_(lidn).mw
+++ b/Kus_(lidn).mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Kusan lidnanznam
  | Flag text = Kusan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 17,368
- | Voz' = 2017
+ | Eläjiden lugu = 16,722
+ | Voz' = 2020
  | Pind = 15
  | Fail = Стоянка - panoramio (23).jpg
- | Pämez' = Valerii Vasenöv<br />(kül'mku 2015—)
+ | Pämez' = Aleksei Čistäkov<br />(viluku 2021—)
  | Telefonkod = +7-35154-xx-xxx
  | Avtokod = 74. 174
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -29,11 +29,13 @@ Kus-raudtestancii ({{lang-ru|Куса}}) om olmas lidnan lodehes, edel 2012 vot 
 Koume žilod mülüdas lidnankundha Kusan ližaks, niiden ühthine ristitišt oli 87 eläjad vl 2010.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 18 792 ristitud, lidnankundan — 18 879 ristitud. Kaikiš suremb lidnan ristitišt oli 21..22 tuhad eläjid vll 1959−1998 (22 800 rist. vl 1992). Kaik 17 436 ristitud elihe lidnankundas vl 2017.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 18 792 ristitud, lidnankundan — 18 879 ristitud. Kaikiš suremb lidnan ristitišt oli 21..22 tuhad eläjid vll 1959−1998 (22 800 rist. vl 1992). Kaik 17 368 ristitud elihe lidnas i 17 436 ristitud kaikes lidnankundas vl 2017.
 
 Rahvahad (2010): [[venälaižed]] — 86,9%, [[baškiralaižed]] — 7,7%, [[totarlaižed]] — 3,8%, toižed rahvahad — 1,6%.
 
 Professionaližen opendusen lähembaižed aluzkundad ratas Zlatoustas.
+
+Edeline lidnankundan pämez' om Valerii Vasenöv (kül'mku 2015 — tal'vku 2020).
 
 == Homaičendad ==
 <references />
