--- a/Ozörsk_(Čeläbinskan_agj).mw
+++ b/Ozörsk_(Čeläbinskan_agj).mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Ozörskan lidnanznam (Čeläbinskan agj)
  | Flag text = Ozörskan flag (Čeläbinskan agj)
  | Valdkund = Venäma
- | Eläjiden lugu = 79,265
- | Voz' = 2017
+ | Eläjiden lugu = 78,440
+ | Voz' = 2020
  | Pind = 150
  | Fail = Ozersk Broadway.jpg
  | Pämez' = Jevgenii Ščerbakov<br />(eloku 2017—)
@@ -31,11 +31,25 @@ Lidn sijadase ümbrikon pohjoižes, [[Uralmäged|Suviuralan]] päivnouzmaižel e
 Novogornii-žilo (6 733 rist. vl 2010), Metlino-žilo (3 694 rist. vl 2010), koume pen't žilod i külä mülüdas lidnümbrikho Ozörskan ližaks. Lidnümbrikon pind — 657,3 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 82 164 ristitud, lidnümbrikon — 93 044 ristitud. Vspäi 1996 kaikiš suremb lidnan ristitišt oli enamba 91 tuhad eläjid vll 2002−2005 (91 800 rist. vl 2003). Kaik 89 731 eläjad om lidnümbrikos (2017).
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 82 164 ristitud, lidnümbrikon — 93 044 ristitud. Vspäi 1996 kaikiš suremb lidnan ristitišt oli enamba 91 tuhad eläjid vll 2002−2005 (91 800 rist. vl 2003). Kaik 79 265 eläjad oli lidnas i 89 731 eläjad kaikes lidnümbrikos vl 2017.
 
 Rahvahad (2010): [[venälaižed]] — 89,6%, [[baškiralaižed]] — 3,8%, [[totarlaižed]] — 3,3%, [[ukrainalaižed]] — 1,5%, toižed rahvahad — 1,8%.
 
-Professionaližen opendusen aluzkundad oma: keskopendusen — Ozörskan tehnine kolledž<ref>[http://www.oztk.chelb.ru/ Ozörskan tehnižen kolledžan sait (''oztk.chelb.ru'').] {{ref-ru}}</ref> i Ozörskan čomamahtoiden kolledž, üläopendusen oma Ozörskan tehnologine institut — Nacionaližen MIFI-südäitukuižtedoiduzkeskusen filial i Suviuralan valdkundaližen universitetan filial.
+Professionaližen opendusen aluzkundad oma: keskopendusen — Ozörskan tehnine kolledž<ref>[http://www.oztk.chelb.ru/ Ozörskan tehnižen kolledžan sait (''oztk.chelb.ru'').] {{ref-ru}}</ref> i Ozörskan čomamahtoiden kolledž, üläopendusen oma Ozörskan tehnologine institut<ref>[http://oti.ru/ Ozörskan tehnologižen institutan sait (''oti.ru'').] {{ref-ru}}</ref> — Nacionaližen MIFI-südäitukuižtedoiduzkeskusen filial i Suviuralan valdkundaližen universitetan filial.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Администрация города. Проспект Ленина, 30а, Озерск, Челябинская область.jpg|Lidnan administracijan sauvuz (2007)
+Храм в городе Озерске.jpg|Pühän Jumalanmaman Katken pühäpert', vn 2013 nägu
+Mayak-FMSF-Cetac-36.jpg|Südäitukmaterialiden konteinervaražom «Majak»-ühtelmasel vl 2009 vai sen aigemba
+Аграяшская ТЭЦ.jpg|Agrajašan LEK Novogornii-žilos vl 2006
+Здание филиала Московского инженерно-физического института. Проспект Победы, 48, Озерск, Челябинская область.jpg|Ozörskan tehnologine institut — MIFI:n filial (2007)
+Южно-Уральский политехнический колледж.jpg|Ozörskan tehnologižen institutan kolledž (ende erine Suviuralan politehnine kolledž, 2013, päkorpus)
+Куольный театр.JPG|Tätüižteatr (2013)
+Поликлиника стоматологическая. Проспект Победы, 2а, Озерск, Челябинская область.jpg|Stomatologine poliklinik (2007)
+Больница детская. Проспект Победы, 1а, Озерск, Челябинская область.jpg|Lapsiden läžundkodi (2006)
+Railway station in the city of Ozersk.jpg|Ozörsk-päraudtestancijan sauvuz vl 2016
+</gallery>
 
 == Homaičendad ==
 <references />
