/* Pedajaha sidodud vepsän ozoitez */ +

--- a/Pedai.mw
+++ b/Pedai.mw
@@ -37,7 +37,12 @@ Ottas kävutamižhe [[pu (material)|pumaterialaks]] levedali: kogonaižed parded
 * ''Solätik'' — mectunu pedajil soröun.
 * ''Somändik'' — so pedajidenke.
 
-== Pedajaha sidodud vepsän ozoitez ==
+== Pedajha sidodud vepsän muštatišed da ozoitesed ==
+=== Muštatiž ===
+<blockquote>
+* ''Pedai pit'k om, a oksad lühüdad.''
+</blockquote>
+=== Ozoitez ===
 <blockquote>
 * Mecas koume mechašt, kezal i tal'vel ühted sädod. (hong, kuz' da kadag)
 </blockquote>
