*Empty MediaWiki Message*

--- a/Pedai.mw
+++ b/Pedai.mw
@@ -40,7 +40,7 @@ Ottas kävutamižhe [[pu (material)|pumaterialaks]] levedali: kogonaižed parded
 == Pedajha sidodud vepsän muštatišed da ozoitesed ==
 === Muštatiž ===
 <blockquote>
-* ''Pedai pit'k om, a oksad lühüdad.''
+* ''Pedai pit'k om, a oksad lühüdad.'' (ei kaik ole kebn)
 </blockquote>
 === Ozoitez ===
 <blockquote>
