--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -39,6 +39,7 @@ Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi mel
 * ''Kolijalpäi velgad ed ota.''
 * ''Korman ei käske.'' (rahoid ei ole)
 * ''Kut sä minei, muga i mä sinei.''
+* ''Kuti padaha paik pandud.'' (om tehtud satusetomašti)
 * ''Kuverz' taht rada, hüvähä ei mäne.''
 * ''Küzuda eile vargastada. / Küzundas ei lögoi.''
 * ''Käzil jo ed ladi.''
