--- a/3_(lugu).mw
+++ b/3_(lugu).mw
@@ -4,7 +4,7 @@
 == Ičendad ==
 * Nece lugu om palatoi, jagamatoi.
 
-== Koume-lugusanha sidotud vepsän muštatišed da ozoitesed ==
+== Koume-lugusanha sidodud vepsän muštatišed da ozoitesed ==
 === Muštatišed ===
 <blockquote>
 * ''Koume akad dai suim.''
@@ -13,7 +13,7 @@
 
 === Ozoitesed ===
 <blockquote>
-Mecas koume mechašt, kezal i tal'vel ühted sädod (hong, kuz' da kadag).
+Mecas koume mechašt, kezal i tal'vel ühted sädod. (hong, kuz' da kadag)
 </blockquote>
 
 [[Kategorii:Lugusanad]]
