/* Mustikaižhe sidodud vepsän muštatišed da ozoitesed */ +

--- a/Mustikaine.mw
+++ b/Mustikaine.mw
@@ -97,6 +97,7 @@ Fail:BilberriesBig.jpg|Mustikaižen marjad
 === Muštatišed ===
 <blockquote>
 * ''Ičein ma manzikaine, veraz ma mustikaine.''
+* ''Poimin bolad, a tegihe mustikaižeks.'' (nägu i toziolend erinedas)
 * ''Sapkoid kuluta ed — mustikašt sö ed.''
 </blockquote>
 
