--- a/Bol.mw
+++ b/Bol.mw
@@ -18,7 +18,7 @@
 }}
 '''Bol''' vai '''Nabol (Nobol)''' ({{lang-la|Vaccínium vítis-idaéa}}) om tal'veline vihand [[penzhaine]], [[Kanabränvuiččed]]-sugukundan [[Vaccinium]]-heimon [[erik]].
 
-== Bolha sidotud vepsän tärtused ==
+== Bolha sidodud vepsän tärtused ==
 * ''[[Bolišt]], nabolišt, bolpaik, bolkišt, bolžom'' — taho, kus kazvab äi bolad.
 * ''[[Bolšti]]'' — särbmine suloimespäi (idüjauhospäi) bolanke.
 * ''[[Boltahtaz]]'' — vezipudr (huttu) kagrjauhospäi bolanke.
@@ -94,16 +94,21 @@ Jodas marjoiden südäivet [[arterialine painuz|lujetud arterialižen painuden]]
 
 == Galerei ==
 <center><gallery>
-Fail:Vaccinium vitis-idaea IM4814 Puolukka C.JPG|Boltophad kezapaikoil
-Fail:Vaccinium vitis-idaea flowers.jpg|Bol änikoil
-Fail:Lingonberries.jpg|Bol umbikoil
-Fail:Cowberry.jpg|Bolan marjad
-Fail:Preiselbeeren-WJP-1.jpg|Poimdüd bol
-Fail:Winter-lingonberry.JPG|Bolan varz' tal'vel
-Fail:Mors (ru. Морс - прохладительный негазированный напиток).JPG|Bolvezi ([[mors]] bolmarjoišpäi)
-Fail:LingonberryJam.jpeg|Leib bolasižen džemanke päl
-Fail:Pannkaka.jpg|Bol saharanke da kürzidenke
+Vaccinium vitis-idaea IM4814 Puolukka C.JPG|Boltophad kezapaikoil
+Vaccinium vitis-idaea flowers.jpg|Bol änikoil
+Lingonberries.jpg|Bol umbikoil
+Cowberry.jpg|Bolan marjad
+Preiselbeeren-WJP-1.jpg|Poimdüd bol
+Winter-lingonberry.JPG|Bolan varz' tal'vel
+Mors (ru. Морс - прохладительный негазированный напиток).JPG|Bolvezi ([[mors]] bolmarjoišpäi)
+LingonberryJam.jpeg|Leib bolasižen džemanke päl
+Pannkaka.jpg|Bol saharanke da kürzidenke
 </gallery></center>
+
+== Bolha sidodud vepsän muštatiž ==
+<blockquote>
+* ''Poimin bolad, a tegihe mustikaižeks.'' (nägu i toziolend erinedas)
+</blockquote>
 
 == Kacu mugažo ==
 * [[Kažibol]]
