--- a/Künambruz.mw
+++ b/Künambruz.mw
@@ -6,6 +6,11 @@ Niveleh om ühtenzoittud, koume lud sätas koumed palatont niveleht. Ned niveleh
 * Ougpal'cniveleh ({{lang-la|articulatio humeroradialis}})
 * Proksimaline pal'ckünambruzniveleh ({{lang-la|articulatio radioulnaris proximalis}})
 
+== Künambrushe sidodud vepsän muštatiž ==
+<blockquote>
+* ''Ku muga oliži, ka künambrusel ristižimoi.'' (ku linniži vauvatadud vai tarbhaine aigtego)
+</blockquote>
+
 == Homaičendad ==
 <references />
 
