/* Heboho sidodud vepsän muštatišed da ozoitesed */ +

--- a/Hebo.mw
+++ b/Hebo.mw
@@ -46,6 +46,7 @@ Hebon söte kogoneb [[kagr]]aspäi i kuivatud heinäspäi päpaloin, vajehtadas 
 * ''Hebodme i kormad heinäd andad.''
 * ''Hebon higoho da akan voikhu ala kacu.''
 * ''Hein ei hebonno kävele''.
+* ''Hot' tegi, ka ei varzad tacind.'' (ei radond lujas)
 * ''Händaspäi hebod ei voi vall'astada''.
 * ''Ičein hebol keskel redud ei häkoi.''
 * ''Kus hebo astui, ka kabjad tunduba.''
