/* Vändho sidodud vepsän muštatišed da ozoitesed */ +

--- a/Vänd.mw
+++ b/Vänd.mw
@@ -13,7 +13,9 @@ Vändon tundused da tärtused: materialižiden satusiden olmatomuz, südäiolend
 <blockquote>
 * ''Eile vändod — eile bobašt.''
 * ''Ezmäi rad, eskai vänd.''
+* ''Ni tutul, ni vätul.'' (eile muga i eile ninga)
 </blockquote>
+
 === Ozoitez ===
 <blockquote>
 * Penes järvudes lahnad vätas. (kürzad rehtläl)
