--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -30,6 +30,7 @@ Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi mel
 * ''Elokaz kut zatrib, a goll' kut voib.''
 * ''Ende mez' man möb, edel kut sanan söb.''
 * ''Eraz emäg tegeb hubaspäi čoman, a eraz čomaspäi huban.''
+* ''Hoikas jokseb — da sanktas lähteb.'' (rezul'tat ei sättu tegendoile)
 * ''Hüvä da veraz, paha da ičeiž.''
 * ''Kaht jänišad küksendeled, ni üht ed tabada.''
 * ''Kebnas tuli, kebnas läksi.''
