/* Pirgha sidotud vepsän muštatiž */ +

--- a/Pirg.mw
+++ b/Pirg.mw
@@ -31,9 +31,10 @@ Erased instrumentad pirgoiden tehmižen täht: ''pirgvärtin'', ''pirgpuik''.
 * ''Taukunpirg'' — pirg [[taukun|tauknanke]].
 * ''Tulčenik'' — umbel'jäine pirg bobsüdäimenke (bobad vai herneh).
 
-== Pirgha sidotud vepsän muštatiž ==
+== Pirgha sidodud vepsän muštatišed ==
 <blockquote>
-''Nagrižpirgas eile sömäd, nekrutas eile oluhad.''
+* ''Nagrižpirgas eile sömäd, nekrutas eile oluhad.''
+* ''Pirzištade — dai pirg, virzištade — dai virz.'' (sinun täutmatomuz ei vajehta situacijad)
 </blockquote>
 
 == Kacu mugažo ==
