--- a/Virzud.mw
+++ b/Virzud.mw
@@ -4,11 +4,16 @@ Varmitihe kengänpohjad, plettihe da ühtenzoittihe sidä pit'kil barboil, ninel
 
 Virzud oliba odvad levitadud materialan, tehmižen kebnuden i lühüdan kävutandan tagut. Openzihe mužikoid tehta virzuid lapsessai, sid' čopakuz rados laski pästta mugoižid kengid töiden kesketi.
 
+== Virzuihe sidodud vepsän muštatiž ==
+<blockquote>
+* ''Pirzištade — dai pirg, virzištade — dai virz.'' (sinun täutmatomuz ei vajehta situacijad)
+</blockquote>
+
 == Galerei ==
 <center><gallery>
-Fail:Museum of History of Donetsk metallurgical plant (012).jpg|Virzud (Doneckan metallurgižen tegimen muzei)
-Fail:Кочедык.jpg|Katač — [[oraine]] sidomha virzuid. Venälaine imperii, 19. voz'sada
-Fail:A Muzhik Botching the Bast Shoes, an Old Woman Spinning Thread.jpg|Virzud jaugoil, virzun sidond. Voikuva, 19. voz'sadan ezmäine pol'
+Museum of History of Donetsk metallurgical plant (012).jpg|Virzud (Doneckan metallurgižen tegimen muzei)
+Кочедык.jpg|Katač — [[oraine]] sidomha virzuid. Venälaine imperii, 19. voz'sada
+A Muzhik Botching the Bast Shoes, an Old Woman Spinning Thread.jpg|Virzud jaugoil, virzun sidond. Voikuva, 19. voz'sadan ezmäine pol'
 </gallery></center>
 
 == Homaičendad ==
