/* Ühesa-lugusanha sidodud vepsän muštatiž */ +

--- a/9_(lugu).mw
+++ b/9_(lugu).mw
@@ -4,8 +4,9 @@
 == Lugun ičendad ==
 * Nece lugu om palakaz.
 
-== Ühesa-lugusanha sidodud vepsän muštatiž ==
+== Ühesa-lugusanha sidodud vepsän muštatišed ==
 <blockquote>
+* ''Čud čudon ajab, jäl'ghe ühesa jokseb.'' (pagištas sures čududelendas)
 * ''Käded oma ühted, ei ole niid ühesa.'' (ei voi ehttä tehta kaiked)
 </blockquote>
 
