/* Pajoho sidodud vepsän muštatišed */ +

--- a/Pajo.mw
+++ b/Pajo.mw
@@ -15,6 +15,7 @@ Pajo voib edestadas kut ühtel [[pajatai|pajatajal]], muga [[hor]]al-ki. Pajatad
 * ''Näl'ghišt ei pajatoita.''
 * ''Pahal lindul i pajod pahad oma.''
 * ''Pajata hot' karzn'as ka kuldas, voika hot' pertin päl ka ei kulgoi.''
+* ''Pajatada — ei haugoid čapta.''
 * ''Pajatada om paremb ühtes, a pagišta eriži.''
 * ''Pajoiš ei ole pahut.''
 * ''Pajos — tozi, a sarnoiš — kelastuz.''
