*Empty MediaWiki Message*

--- a/Forrest_Gamp.mw
+++ b/Forrest_Gamp.mw
@@ -1,6 +1,33 @@
-{{Čuta poiš|New stub < 1 kB}}
-{{Fil'm-WD}}
-'''«Forrest Gamp»''' ({{lang-en|Forrest Gump}}) om [[1994]]-nden voden [[AÜV|amerikalaine]] torafil'm.
+{{Fil'm
+ | Nimi         = Forrest Gamp<br />Forrest Gump
+ | Kuvan ümbrikirjutand = 
+ | Voz'         = 1994.
+ | Valdkund     = {{USA}}
+ | Kel'         = [[anglijan kel'|anglijan]]
+ | Žanr         = komedine dram
+ | Režissör     = [[Zemekis Robert|Robert Zemekis]]
+ | Scenarii     = Erik Rot
+ | Muzikankirjutai = [[Alan Silvestri]]
+ | Idejan tegii = 
+ | Aktörad      = [[Tom Henks]]<br/>[[Robin Rait]]<br/>[[Geri Siniz]]<br/>[[Salli Fild]]
+ | Prodüser     = 
+ | Kompanii     = [[The Tisch Company]]
+ | Studii       =
+ | Piduz        = 142 minutad
+ | Montaž       = 
+ | Operator     = Don Bördžess
+ | Arvlahjad    = 
+ | Büdžet       = 
+ | Salhed       = 
+ | Salhed Venämas =  
+ | Edeline fil'm    = 
+ | Jäl'ghine fil'm  = 
+ | Röunatuz igäs = 
+ | Sait         = 
+ | imdb_id      = 0109830
+ | kp_id        = 
+}}
+'''«Forrest Gamp»''' ({{lang-en|Forrest Gump}}) om [[1994]]-nden voden [[AÜV|amerikalaine]] komedine dram..
 
 Režissör — [[Zemekis Robert|Robert Zemekis]].
 
