Removing [[:c:File:Emblem_of_Hanoi.svg|Emblem_of_Hanoi.svg]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Vietnamese district emblems|]].

--- a/Hanoi.mw
+++ b/Hanoi.mw
@@ -1,7 +1,7 @@
 {{10000}}{{A10000}}
 {{Eländpunkt
  | Nimi = Hanoi<br />Hà Nội
- | Lidnanznam = Emblem of Hanoi.svg
+ | Lidnanznam =
  | Flag = Flag of Hanoi (proposal).svg
  | Lidnanznam text = Hanoin lidnanznam
  | Flag text = Hanoin flag
