--- a/TEM18.mw
+++ b/TEM18.mw
@@ -1,17 +1,19 @@
 [[Fail:Diesel locomotives TEM18-017 .jpg|thumb|right|250px|TEM18]]
 '''TEM18''' ({{lang-ru|ТЭМ18}}) om [[Venäma|venämalaine]] [[lämuzvedim]] elektroajaimenke.
 
-Model' pästtase [[Bränsk]]an mašinansauvomižen tegimel vspäi 1992 tähäsai. Lämuzvedim om tarbhaine manevruindan, vedandan i kebnan magistraližen radon täht ühthižil raudteil i tegimišton edheotandoil.
+Model' pästtase [[Bränsk]]an mašinansauvomižen tegimel vspäi 1992 tähäsai. Kaik om pästtud 1796 mašinad vn 2020 elokule. Lämuzvedim om tarbhaine manevruindan, vedandan i kebnan magistraližen radon täht ühthižil raudteil i tegimišton edheotandoil.
 
-Kaik om pästtud 1796 mašinad vn 2020 elokule. Likutim om nell'taktine 1PD-1A, kävutab dizel'poltust.
+TEM18-bazmodelin likutim om nell'taktine 1PD-1A, kävutab dizel'poltust. Vll 2004−2007 pästtihe TEM18D-modifikacijad, vspäi 2007 TEM18DM-modifikacii pästtase (3<sub>О</sub>−3<sub>О</sub>−3<sub>О</sub> värtmuziden formulanke). Modifikacijoiden likutim om paremboittud 1PD-4D, azotim om elektrine, vedajan herkusen kontrolin telemehanine sistem om ližatud, vspäi 2008 kontrolin da varuitomuden komplekssistem om olmas.
 
-Tegim sauvob necen serijan lämuzvedimid erazvuiččiš modifikacijoiš, 1435..1676 mm raižun täht, venon i tropikoiden klimatan täht.
+Tegim sauvob necen serijan lämuzvedimid erazvuiččiš modifikacijoiš penil partijoil, 1435..1676 mm raižun täht, venon i tropikoiden klimatan täht.
 
 == Tehnižed andmused ==
 * Värtmuziden formul — 3<sub>О</sub>−3<sub>О</sub>.
 * Likutimen vägevuz — 1200 hebonväged.
 * Kaikiš lujemb piguz — 100 kilometrad časpigudenke.
 * Täuz' radnikoičendveduz — 126 tonnad.
+* Poltusen vara — 6,4 tonnad.
+* Letken vara — 2 tonnad.
 
 == Homaičendad ==
 <references />
