--- a/Hanoi.mw
+++ b/Hanoi.mw
@@ -27,10 +27,10 @@ Lidn sijadase Šonghong-jogen oiktal randal tobjimalaz ({{lang-vi|Sông Hồng}}
 
 Klimat om [[subekvatorialine vö|subekvatorialine]] mussonine.
 
-Hanoin municipalitet jagase (vn 2016 andmused) 12 lidnrajonha (''quận''), Šontei-sodalidnha (''thị xã'') da 17 makundha (''huyện'').
+Hanoin municipalitet jagase (vn 2016 andmused) 12 lidnrajonaks (''quận''), Šontei-sodalidnaks (''thị xã'') da 17 makundaks (''huyện'').
 
 == Eläjad ==
-Vl 2014 eläjiden lugu oli 7 067 000 ristitud. Vn 2015 16,1 mln eläjid om ezilidnoidenke 24 314,7 km² pindal, se om Vjetnaman kaikiš suremb lidnaglomeracii.
+Vl 2014 lidnan eläjiden lugu oli 7 067 000 ristitud. Kaik 16,1 mln eläjid (2015) om ezilidnoidenke 24 314,7 km² pindal, se om Vjetnaman kaikiš suremb lidnaglomeracii.
 
 == Sebruzlidnad ==
 * {{TUR|#}} [[Ankar]], [[Turkanma]] (vspäi 1998)
