--- a/Pontan_grekalaižed.mw
+++ b/Pontan_grekalaižed.mw
@@ -1,9 +1,9 @@
-[[Fail:Pontus Greek family.JPG|thumb|right|250px|Pontan grekalaižiden kanz.]]
-'''Pontan grekalaižed''', vai '''pontijalaižed''' ([[pontan kel'|pont.]] i [[grekan kel'|grek.]]: ''πόντιοι'', [[turkan kel'|turk.]]: ''Pontus rumları'', [[venäkel'|ven.]]: ''понтийцы / понтийские греки'') oma [[grekalaižed|grekalaižiden]] etnografine grupp.
+[[Fail:Pontus Greek family.JPG|thumb|right|250px|Pontan grekalaižiden kanz (vn 1910 fotokuva)]]
+'''Pontan grekalaižed''', vai '''pontijalaižed''' ([[pontan kel'|pont.]] i {{lang-el|πόντιοι}} ''pontioi'', {{lang-tr|Pontus rumları}}, {{lang-ru|понтийцы / понтийские греки}}) oma [[grekalaižed|grekalaižiden]] etnografine grupp.
 
-Elädas [[Grekanma]]s, [[Venäma]]s da [[Turkanma]]s. Faktižikš, pontijalaižiden kodima om Turkanman territorii (sen pohjoine da öbok), no nügüd' äjad heišpäi hül'gäižiba valdkundad. Ühthine lugu om läz 3 millionad ristituid. Pagištas [[grekan kel'|grekan]] da [[venäkel'|venäkelil]]. Ičeze [[pontan kel'|pontan kel' (dialekt)]] tezi vaiše läz 300 000 ristitud.
+Elädas [[Grekanma]]s, [[Venäma]]s da [[Turkanma]]s. Faktižikš, pontijalaižiden kodima om Turkanman territorii (sen pohjoine da öbok), no nügüd'aigan äjad heišpäi hül'gäižiba valdkundad. Ühthine lugu om läz koumed millionad ristituid. Pagištas [[grekan kel'|grekan]] i [[venäkel'|venäkelil]]. Ičeze [[pontan kel'|pontan kel' (dialekt)]] tezi vaiše läz 300 000 ristituid. [[Ortodoksine hristanuskond|Ortodoksižed hristanuskojad]] päpaloin.
+
 {{stub}}
-
 [[Kategorii:Pontan grekalaižed| ]]
 [[Kategorii:Grekalaižed]]
 [[Kategorii:Etnografižed gruppad kirjamišton mödhe]]
