--- a/Pontan_kel'.mw
+++ b/Pontan_kel'.mw
@@ -1,11 +1,12 @@
-'''Pontan kel' (dialekt)''' (ičeze nimituz: ''ποντιακά'' «pontiaká») om [[grekan grupp]]an kel'. Pagištas tobjimalaz [[Turkanma]]s da [[Grekanma]]s, da mugažo [[Ukrain]]as, [[Venäma]]s, [[Armenii|Armenijas]] i m. e.
+'''Pontan kel' (dialekt)''' (ičeze nimituz: ''ποντιακά'' «pontiaká») om [[grekan kel'grupp|grekan gruppan]] kel' vai [[grekan kel'|grekan kelen]] dialekt. Pagištas [[Turkanma]]s i [[Grekanma]]s tobjimalaz, mugažo [[Ukrain]]as, [[Venäma]]s, [[Armenii|Armenijas]].
 
-Pagižijoiden lugu om läz 300 000 ristitud kaiked mail'madme. Om oficialižeta statusata.
+Pagižijoiden lugu om läz 300 000 ristituid kaiked mail'madme, [[pontan grekalaižed|etnografižen gruppan]] kümnendez. Kel' om oficialižeta statusata.
 
 == Homaičendad ==
 <references/>
 
 {{stub}}
+[[Kategorii:Pontan grekalaižed]]
 [[Kategorii:Indoevropižed keled]]
 [[Kategorii:Keled i dialektad kirjamišton mödhe]]
 [[Kategorii:Grekanman keled]]
