--- a/Pontan_grekalaižed.mw
+++ b/Pontan_grekalaižed.mw
@@ -1,7 +1,7 @@
 [[Fail:Pontus Greek family.JPG|thumb|right|250px|Pontan grekalaižiden kanz (vn 1910 fotokuva)]]
-'''Pontan grekalaižed''', vai '''pontijalaižed''' ([[pontan kel'|pont.]] i {{lang-el|πόντιοι}} ''pontioi'', {{lang-tr|Pontus rumları}}, {{lang-ru|понтийцы / понтийские греки}}) oma [[grekalaižed|grekalaižiden]] etnografine grupp.
+'''Pontan grekalaižed''', vai '''pontijalaižed''' (ičeze nimituz '''romejad''', {{lang-el|Ρωμαίοι}} ''romaioi'' «rimalaižed»; [[pontan kel'|pont]]. i {{lang-el|πόντιοι}} ''pontioi'', {{lang-tr|Pontus rumları}}, {{lang-ru|понтийцы / понтийские греки}}) oma [[grekalaižed|grekalaižiden]] etnografine grupp istorižes [[Pont]]-agjaspäi [[Mustmeri|Mustmeren]] suvipäivnouzmaižel randal.
 
-Elädas [[Grekanma]]s, [[Venäma]]s da [[Turkanma]]s. Faktižikš, pontijalaižiden kodima om Turkanman territorii (sen pohjoine da öbok), no nügüd'aigan äjad heišpäi hül'gäižiba valdkundad. Ühthine lugu om läz koumed millionad ristituid. Pagištas [[grekan kel'|grekan]] i [[venäkel'|venäkelil]]. Ičeze [[pontan kel'|pontan kel' (dialekt)]] tezi vaiše läz 300 000 ristituid. [[Ortodoksine hristanuskond|Ortodoksižed hristanuskojad]] päpaloin.
+Elädas [[Grekanma]]s (2 mln), [[Turkanma]]s (läz 340 tuhad), [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiš]] (200 tuh.), [[Saksanma]]s, [[Venäma]]s i [[Ukrain]]as (läz 100 tuhad kaikuččes), znamasižed gruppad oma [[Kipr]]as, [[Avstralii|Avstralijas]], [[Kanad]]as i Keskuzazijan maiš. Pontijalaižiden kodima om nügüdläižen Turkanman territorii (sen pohjoine da öbok), no 1920-nziš vozišpäi äjad heišpäi hül'gäižiba valdkundad. Ühthine lugu om läz koumed millionad ristituid. 20. voz'sadaspäi pagištas elämižen valdkundan kelel ([[grekan kel'|grekan]], [[anglijan kel'|anglijan]], [[venäkel'|venäkelel]] da tž.). Ičeze [[pontan kel'|pontan kel' (dialekt)]] tezi vaiše läz 300 000 ristituid. [[Ortodoksine hristanuskond|Ortodoksižed hristanuskojad]] päpaloin, [[islam]]anuskojad Turkanmas.
 
 {{stub}}
 [[Kategorii:Pontan grekalaižed| ]]
