--- a/7_(lugu).mw
+++ b/7_(lugu).mw
@@ -1,6 +1,7 @@
+[[Fail:Evo7glyph.svg|thumb|right|7-znaman evolücii araban kirjkeles]]
 '''7''' ('''seičeme''') om [[naturaližed lugud|naturaline]] numeral' (lugusana) [[6 (lugu)|6]] da [[8 (lugu)|8]] keskes.
 
-Lugetas seičemed ozavaks luguks [[Päivlaskmma]]n kul'turoiš. Mainitase [[Biblii|Biblijas]] paksus simvoliženke znamoičendanke.
+Lugetas seičemed [[oza]]vaks luguks [[Päivlaskmma]]n kul'turoiš (vastkarin om [[Vjetnam]]an kul'turas). Mainitase [[Biblii|Biblijas]] paksus simvoliženke znamoičendanke. Ende lugetihe seičeme planetad taivhas i jagoihe [[nedal'|nedalid]] niiden mödhe. Amuižen aigan «seičeme» znamoiči «äi», sid' «[[nell'kümne]]» oti mugošt znamoičendad.
 
 == Lugun ičendad ==
 * Nece lugu om jagamatoi. Nellänz' [[palatoi lugu]], [[5 (lugi)|viden]] [[palatomad lugud-kaks'jaižed|kaks'jaine]]
@@ -8,6 +9,7 @@ Lugetas seičemed ozavaks luguks [[Päivlaskmma]]n kul'turoiš. Mainitase [[Bibl
 * Koumanz' [[ozav lugu]] matematikas
 * 2<sup>7</sup> = 128
 * 7<sub>10</sub> = 111<sub>2</sub> = 21<sub>3</sub> = 13<sub>4</sub> = 12<sub>5</sub> = 11<sub>6</sub> = 10<sub>7</sub> = 7<sub>8(da sen edemba)</sub>.
+* neitraline [[pH]].
 
 == Seičeme-lugusanha sidodud vepsän muštatišed ==
 <blockquote>
