--- a/7_(lugu).mw
+++ b/7_(lugu).mw
@@ -9,7 +9,11 @@ Lugetas seičemed [[oza]]vaks luguks [[Päivlaskmma]]n kul'turoiš (vastkarin om
 * Koumanz' [[ozav lugu]] matematikas
 * 2<sup>7</sup> = 128
 * 7<sub>10</sub> = 111<sub>2</sub> = 21<sub>3</sub> = 13<sub>4</sub> = 12<sub>5</sub> = 11<sub>6</sub> = 10<sub>7</sub> = 7<sub>8(da sen edemba)</sub>.
+
+== Tedos==
 * neitraline [[pH]].
+* [[notad|notoiden]] lugu muzikpordhil.
+* [[azot]]an (N) atomiden lugu.
 
 == Seičeme-lugusanha sidodud vepsän muštatišed ==
 <blockquote>
