--- a/Antiguan_da_Barbudan_flag.mw
+++ b/Antiguan_da_Barbudan_flag.mw
@@ -1,8 +1,16 @@
 [[Fail:Flag of Antigua and Barbuda.svg|border|right|250px]]
-'''Antiguan da Barbudan flag''' ({{lang-en|Flag of Antigua and Barbuda}}) om [[Antigua da Barbud]]-valdkundan üks' oficialižiš simvolišpäi. Se om vahvištadud [[1967]]-nden voden 27. päiväl uhokud. Sädi rahvahaline Redžinald Samüel'-pirdai da skul'ptor (angl. ''Sir Reginald Samuel''). Flagan proporcii om ''2:3''.
+'''Antiguan da Barbudan flag''' ({{lang-en|Flag of Antigua and Barbuda}}) om [[Antigua da Barbud]]-valdkundan üks' oficialižiš simvolišpäi. Se om vahvištadud [[1967]]-nden voden 27. päiväl uhokud. Sädi rahvahaline Redžinald Samüel'-pirdai da skul'ptor (angl. ''Sir Reginald Samuel''), hänen variant oli valitud konkursal 600 pirdatesespäi. Flagan proporcii om ''2:3''.
 
 == Ümbrikirjutand ==
-Lapakoiged trikolor mustan, sinižen (levedusen pol'), i vauktan mujun. Kaks' rusttad oigedsaumnikad kuvadasoiš sen molembiš polišpäi. Päiväine nouzeb mustal šoidul, ühesa sädegid.
+Lapakoiged trikolor mustan, sinižen (levedusen pol'), i vauktan mujun, šoiduiden rindatuz om ''9:5:9''. Kaks' rusttad oigedsaumnikad kuvadasoiš teran molembiš polišpäi. Päiväine nouzeb mustal šoidul, ühesa sädegid.
+
+Mujuiden znamoičend:
+* Kuldaine päiväine om sijaližen klimatan pird.
+* Must šoid ozutab eläjiden afrikašt augotižlibundad.
+* Rusked muju simvoliziruib rahvahan energijad.
+* Päiväine i mujud alahas sišpäi (sinine, vauged): päiväine, meri, kül'bendrandad.
+* Sinine muju znamoičeb [[Kariban meri|Kariban mert]] i toivod.
+* V-vuitte form om vägestusen simvol ({{lang-en|victory}} «vägestuz»).
 
 == Kacu mugažo ==
 * [[Antiguan da Barbudan valdkundznam]]
