*Empty MediaWiki Message*

--- a/Antiguan_da_Barbudan_flag.mw
+++ b/Antiguan_da_Barbudan_flag.mw
@@ -2,7 +2,7 @@
 '''Antiguan da Barbudan flag''' ({{lang-en|Flag of Antigua and Barbuda}}) om [[Antigua da Barbud]]-valdkundan üks' oficialižiš simvolišpäi. Se om vahvištadud [[1967]]-nden voden 27. päiväl uhokud. Sädi rahvahaline Redžinald Samüel'-pirdai da skul'ptor (angl. ''Sir Reginald Samuel''), hänen variant oli valitud konkursal 600 pirdatesespäi. Flagan proporcii om ''2:3''.
 
 == Ümbrikirjutand ==
-Lapakoiged trikolor mustan, sinižen (levedusen pol'), i vauktan mujun, šoiduiden rindatuz om ''9:5:9''. Kaks' rusttad oigedsaumnikad kuvadasoiš teran molembiš polišpäi. Päiväine nouzeb mustal šoidul, ühesa sädegid.
+Lapakoiged trikolor mustan, sinižen (flagan levedusen pol'), i vauktan mujun, šoiduiden levedusiden rindatuz om ''9:5:9''. Kaks' rusttad oigedsaumnikad kuvadasoiš teran molembiš polišpäi. Päiväine nouzeb mustal šoidul, ühesa sädegid.
 
 Mujuiden znamoičend:
 * Kuldaine päiväine om sijaližen klimatan pird.
