--- a/Neižne.mw
+++ b/Neižne.mw
@@ -1,5 +1,5 @@
 [[Fail:Photo Elle Colman.jpg|thumb|right|250px|Neižne]]
-'''Neižne''' om nor' [[naine|naižsugun]] ristit (person) suguküpsnendan augotišespäi naimiželon zavodindhasai. Pord sättutoitab läz 13-..20-voččele igäle, sen aigan person kändase täuz'kaznudeks i vaumheks sündutada lapsid.
+'''Neižne''' om nor' [[naine|naižsugun]] ristit (person) [[neičukaine|neičukaižen]] suguküpsnendan augotišespäi [[naimiželo]]n zavodindhasai. Pord sättutoitab läz 13-..20-voččele igäle, sen aigan person-alaigäč kändase täuz'kaznudeks i vaumheks sündutada [[lapsed|lapsid]].
 
 Vaumiž naimiželole neižne kucuse ''neičeižeks''. Jänu naimiželota naine om ''vanh neižne''.
 
@@ -9,7 +9,6 @@ Vaumiž naimiželole neižne kucuse ''neičeižeks''. Jänu naimiželota naine o
 </blockquote>
 
 == Kacu mugažo ==
-* [[Neičukaine]]
 * [[Priha]]
 
 == Homaičendad ==
